Applied most Sonr Recommendations to Repox plugin